@@ -98,6 +98,8 @@ WARNING_NON_EXISTING_I18N_VARIABLE_REFERENCE = Possibly non existing I18n variab
 
 ERROR_INVALID_ERROR_HANDLER_RETURN_CODE = Invalid error handler return code (valid codes are 0, 1, 2 and 3)
 
+ERROR_INVALID_VARIABLE_TYPE_SCHEMA_TYPE_REQUIRED = Invalid variable type, Schema type required
+
 categoryKey=Category
 i18n_lang_codeKey=I18n language code
 
