@@ -91,6 +91,8 @@
 
 #Missing translation -> ERROR_INVALID_ERROR_HANDLER_RETURN_CODE = Invalid error handler return code (valid codes are 0, 1, 2 and 3)
 
+#Missing translation -> ERROR_INVALID_VARIABLE_TYPE_SCHEMA_TYPE_REQUIRED = Invalid variable type, Schema type required
+
 #Missing translation -> categoryKey=Category
 #Missing translation -> i18n_lang_codeKey=I18n language code
 
