@@ -1,6 +1,9 @@
 ###### TWE 5.4-1 RELEASED ######
 
 ###### TWE 5.3-2 RELEASED ######
+2016-02-19 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: Improved handling and validation of new TWF related extended attribute TWF_XML_VARIABLE_TO_HANDLE
+
 2016-02-18 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: supported new TWF related extended attributes (TWF_XML_VARIABLE_TO_HANDLE and TWF_XML_VARIABLE_ITEM_NAME_PREFIXES)
 
